--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     ports:
       - 8233:8233
     environment: 
+      - USER_SERVICE=http://10.20.30.161:9000
+      - PAYMENT_SERVICE=http://10.20.30.161:9002
